What's New in Python 2.2.2?
Release date: dd-mmm-2002
===========================

Core and builtins

- When x is an object whose class implements __mul__ and __rmul__,
  1.0*x would correctly invoke __rmul__, but 1*x would erroneously
  invoke __mul__.  This was due to the sequence-repeat code in the int
  type.  This has been fixed now.

- If a dying instance of a new-style class got resurrected by its class's
  __del__ method, Python aborted with a fatal error.

- Source that creates parse nodes with an extremely large number of
  children (e.g.,  test_longexp.py) triggers problems with the
  platform realloc() under several platforms (e.g., MacPython, and
  Win98).  This has been fixed via a more-aggressive overallocation
  strategy.

- Fixed a bug with a continue inside a try block and a yield in the
  finally clause.  [SF bug 567538]

- Cycles going through the __class__ link of a new-style instance are
  now detected by the garbage collector.

- Classes using __slots__ are now properly garbage collected.
  [SF bug 519621]

- Repaired a slow memory leak possible only in programs creating a
  great many cyclic structures involving frames.  Reported on
  SourceForge as bug 543148.

- A method zfill() was added to str and unicode, that fills a numeric
  string to the left with zeros.  For example,
  "+123".zfill(6) -> "+00123".

- Complex numbers supported divmod() and the // and % operators, but
  these make no sense.  Since this was documented, they're being
  deprecated now.

- String methods lstrip(), rstrip() and strip() now take an optional
  argument that specifies the characters to strip.  For example,
  "Foo!!!?!?!?".rstrip("?!") -> "Foo". In addition, "200L".strip("L")
  will return "200". This is useful for replacing code that assumed
  longs will always be printed with a trailing "L".

Extension modules

- If the size passed to mmap.mmap() is larger than the length of the
  file on non-Windows platforms, a ValueError is raised. [SF bug 585792]
