@@ -442,6 +442,14 @@ except KeyError:
 else:
     verify(value == u'abc, def')
 
+for ordinal in (-100, 0x200000):
+    try:
+        u"%c" % ordinal
+    except ValueError:
+        pass
+    else:
+        print '*** formatting u"%%c" %% %i should give a ValueError' % ordinal
+
 # formatting jobs delegated from the string implementation:
 verify('...%(foo)s...' % {'foo':u"abc"} == u'...abc...')
 verify('...%(foo)s...' % {'foo':"abc"} == '...abc...')
@@ -736,6 +744,14 @@ for encoding in (
         print '*** codec "%s" failed round-trip' % encoding
     except ValueError,why:
         print '*** codec for "%s" failed: %s' % (encoding, why)
+
+# UTF-8 must be roundtrip safe for all UCS-2 code points
+# This excludes surrogates: in the full range, there would be
+# a surrogate pair (\udbff\udc00), which gets converted back
+# to a non-BMP character (\U0010fc00)
+u = u''.join(map(unichr, range(0,0xd800)+range(0xe000,0x10000)))
+for encoding in ('utf-8',):
+    verify(unicode(u.encode(encoding),encoding) == u)
 
 print 'done.'
 
